working on portals

--- a/public/terms.html
+++ b/public/terms.html
@@ -60,7 +60,9 @@
         <p>If you have any questions about these terms, please contact us at support@rhv.com.</p>
     </main>
     <h2>
-    <a style="margin: 550px;" href="register.html">Click here to go back to registration page</a>
+    <a style="margin: 550px;" href="register.html">Click here to go back to patient registration page</a>
+    <a href="doctorRegister.html">Click here to go back to doctor registration page</a>
+    <a href="adminRegister.html">Click here to go back to admin registration page</a>
     </h2>
     <footer>
         <p id="footer1">© 2024 Remote Healthcare Vault(RHV). All rights reserved.</p>
