additional html files

--- a/public/docPortal.html
+++ b/public/docPortal.html
@@ -22,6 +22,8 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
+    <a href="appointment.html">Book Appointment</a>
+    <a href="profile.html">Profile</a>
     <a href="contact.html">Contact</a>
   </nav>
 
@@ -30,7 +32,7 @@
   <main id="home">
     <h2>Welcome to the Remote Healthcare Vault</h2>
     <p>RHV connects you with the best healthcare providers online, allowing you to schedule appointments and receive consultations virtually.
-      <br>Patients can easily engage with their doctors anytime, register and book appointments.<br> Doctors get value for their time by 
+      <br>Patients can easily engage with you anytime, register and book appointments.<br> As medical professionals, you get value for your time by 
       registering and connecting to their patients virtually, all in one place and that is Remote healthcare vault for you.
     </p><br>
     <h2>Watch this video to learn more about remote patient monitoring</h2>
@@ -49,6 +51,11 @@
       highlighting the benefits, challenges, and future directions of this rapidly evolving field.<br>Learn how biotechnology is driving this revolution,
       enabling healthcare professionals<br> to provide personalized, data-driven care to patients worldwide.<br>
       Whether you're a healthcare professional, patient, or simply interested in the future of healthcare,</p><br>
+      <h2>Here is the process to follow:</h2>
+      1. <a href="doctorRegister.html">Create your account</a><br>
+      2. <a href="doctorLogin.html">Login</a><br>
+      3. <a href="profile.html">Update your profile</a><br>
+      4. <a href="appointment.html">Confirm your schedule updates</a><br>
   </main> 
 
   <!-- Sidebars -->
@@ -58,20 +65,28 @@
       <h2>Our Services</h2>
       <div class="container">
         <div class="card">
-          <h3 id="cardlinks">Virtual Consultations</h3>
+          <a href="appointment.html" id="cardlinks">
+          <h3>Virtual Consultations</h3>
           <p>Book a virtual consultation with a licensed healthcare provider from the comfort of your home.</p>
+        </a>
         </div>
         <div class="card">
+          <a href="services.html">
           <h3>Doctor Specializations</h3>
           <p>Find the right specialist for your health needs and book an appointment at your convenience.</p>
+        </a>
         </div>
         <div class="card">
+          <a href="appointment.html">
           <h3>Appointment Scheduling</h3>
           <p>Easily schedule, reschedule, or cancel your appointments online.</p>
+        </a>
         </div>
         <div class="card">
+          <a href="services.html">
           <h3>Location-Based Services</h3>
           <p>Find nearby health centers using our location-based services integrated with Google Maps.</p>
+        </a>
         </div>
       </div>
     </section>
