--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -22,8 +23,6 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
-    <a href="appointment.html">Book Appointment</a>
-    <a href="profile.html">Profile</a>
     <a href="contact.html">Contact</a>
   </nav>
 
@@ -45,6 +44,15 @@
   </section>
 
   <!-- Footer -->
+  <footer style="background-color: lightpink; color: black;">
+    Review our <a href="terms.html">terms and conditions here</a><br>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-instagram"></i>
+  </footer>
   <footer>
     <p>&copy; 2024 Remote Healthcare Vault(RHV). All Rights Reserved.</p>
   </footer>
