--- a/public/services.html
+++ b/public/services.html
@@ -6,6 +6,8 @@
   <title>Remote Healthcare Vault</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
   <style>
       #map { height: 450px; border-radius: 8px;}
       iframe { border-radius: 8px;}
@@ -38,7 +40,6 @@
         <h3>Virtual Consultations</h3>
         <p>Book a virtual consultation with a licensed healthcare provider from the comfort of your home.</p><br>
         <img src="../images/consult.PNG" alt="patient consulting online"><br>
-        <a href="appointment.html">Click here to consult with us today</a>
       </div>
       <div class="cards">
         <h3>Doctor Specializations</h3>
@@ -52,7 +53,6 @@
         <h3>Appointment Scheduling</h3>
         <p>Easily schedule, reschedule, or cancel your appointments online.</p><br>
         <img src="../images/schedule.PNG" alt="patient scheduling with their caregiver"><br>
-        <a href="appointment.html">Click here to schedule a visit with us today</a>
       </div>
       <div class="cards">
         <h3>Location-Based Services</h3>
@@ -76,6 +76,15 @@
   </section>
 
   <!-- Footer -->
+  <footer style="background-color: #45a049; color: white;">
+    Review our <a href="terms.html">terms and conditions here</a><br>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-instagram"></i>
+  </footer>
   <footer>
     <p>&copy; 2024 Remote Healthcare Vault(RHV). All Rights Reserved.</p>
   </footer>
