--- a/public/terms.html
+++ b/public/terms.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - Remote Healthcare Vault</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -64,8 +65,17 @@
     <a href="doctorRegister.html">Click here to go back to doctor registration page</a>
     <a href="adminRegister.html">Click here to go back to admin registration page</a>
     </h2>
-    <footer>
-        <p id="footer1">© 2024 Remote Healthcare Vault(RHV). All rights reserved.</p>
-    </footer>
+    <footer style="background-color: lightpink; color: black;">
+        Review our <a href="terms.html">terms and conditions here</a><br>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-tiktok"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </footer>
+      <footer>
+        <p>&copy; 2024 Remote Healthcare Vault(RHV). All Rights Reserved.</p>
+      </footer>
 </body>
 </html>
