--- a/public/doctorRegister.html
+++ b/public/doctorRegister.html
@@ -6,6 +6,7 @@
   <title>Remote Healthcare Vault - Doctor Registration</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
 </head>
 <body>
@@ -20,7 +21,7 @@
   </header><br>
   <h2 style="text-align: center;">Doctor's Account Creation</h2>
 
-  <form id="registerForm">
+  <form id="registerForm" data-role="doctor">
     <label for="first_name">First Name</label>
     <input type="text" id="first_name" name="first_name" placeholder="enter first name" required>
 
@@ -98,6 +99,15 @@
   <div id="formSummary"></div>
 
   <!-- Footer -->
+  <footer style="background-color: lightpink; color: black;">
+    Review our <a href="terms.html">terms and conditions here</a><br>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-instagram"></i>
+  </footer>
   <footer>
     <p>&copy; 2024 Remote Healthcare Vault(RHV). All Rights Reserved.</p>
   </footer>
