--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -23,6 +24,12 @@
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="contact.html">Contact</a>
+  </nav>
+  <nav style="background-color: lightpink; color: black;">
+    <a href="register.html">Create a patient's account</a>
+    <a href="doctorRegister.html">Create a doctor's account</a>
+    <a href="login.html">Login in to your patient's account</a>
+    <a href="doctorLogin.html">Login to your doctor's account</a>
   </nav>
 
 <div class="content-container">
@@ -88,8 +95,16 @@
   </aside>
 </div>
   <!-- Footer -->
+  <footer style="background-color: lightpink; color: black;">
+    Review our <a href="terms.html">terms and conditions here</a><br>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-brands fa-youtube"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-instagram"></i>
+  </footer>
   <footer>
-    Review our <a href="terms.html">terms and conditions here</a>
     <p>&copy; 2024 Remote Healthcare Vault(RHV). All Rights Reserved.</p>
   </footer>
 
