--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-    <a href="index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
+    <a href="/public/index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
     </div>
     <h1>Revolutionizing healthcare through telemedicine</h1>
     <p>Your Health, Anytime, Anywhere.
@@ -21,15 +21,15 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
+    <a href="/public/index.html">Home</a>
+    <a href="/public/services.html">Services</a>
+    <a href="/public/contact.html">Contact</a>
   </nav>
   <nav style="background-color: lightpink; color: black;">
-    <a href="register.html">Create a patient's account</a>
-    <a href="doctorRegister.html">Create a doctor's account</a>
-    <a href="login.html">Login in to your patient's account</a>
-    <a href="doctorLogin.html">Login to your doctor's account</a>
+    <a href="/public/patient/register.html">Create a patient's account</a>
+    <a href="/public/doctor/register.html">Create a doctor's account</a>
+    <a href="/public/patient/login.html">Login in to your patient's account</a>
+    <a href="/public/doctor/login.html">Login to your doctor's account</a>
   </nav>
 
 <div class="content-container">
@@ -96,7 +96,7 @@
 </div>
   <!-- Footer -->
   <footer style="background-color: lightpink; color: black;">
-    Review our <a href="terms.html">terms and conditions here</a><br>
+    Review our <a href="/public/terms.html">terms and conditions here</a><br>
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
     <i class="fa-brands fa-linkedin"></i>
@@ -109,6 +109,6 @@
   </footer>
 
   <!-- JavaScript for Interactivity and JWT Handling -->
-  <script src="public/app.js"></script>
+  <script src="/public/app.js"></script>
 </body>
 </html>
