--- a/public/services.html
+++ b/public/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-    <a href="index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
+    <a href="/public/index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
     </div>
     <h1>Revolutionizing healthcare through telemedicine</h1>
     <p>Your Health, Anytime, Anywhere.
@@ -27,9 +27,9 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
+    <a href="/public/index.html">Home</a>
+    <a href="/public/services.html">Services</a>
+    <a href="/public/contact.html">Contact</a>
   </nav>
 
   <!-- Services Section -->
@@ -77,7 +77,7 @@
 
   <!-- Footer -->
   <footer style="background-color: #45a049; color: white;">
-    Review our <a href="terms.html">terms and conditions here</a><br>
+    Review our <a href="/public/terms.html">terms and conditions here</a><br>
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
     <i class="fa-brands fa-linkedin"></i>
@@ -90,6 +90,6 @@
   </footer>
 
   <!-- JavaScript for Interactivity and JWT Handling -->
-  <script src="public/app.js"></script>
+  <script src="/public/app.js"></script>
 </body>
 </html>
