--- a/public/doctor/portal.html
+++ b/public/doctor/portal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-    <a href="index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
+    <a href="/public/index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
     </div>
     <h1>Revolutionizing healthcare through telemedicine</h1>
     <p>Your Health, Anytime, Anywhere.
@@ -21,11 +21,11 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="appointment.html">Book Appointment</a>
-    <a href="profile.html">Profile</a>
-    <a href="contact.html">Contact</a>
+    <a href="/public/index.html">Home</a>
+    <a href="/public/services.html">Services</a>
+    <a href="/public/appointment.html">Check Appointments</a>
+    <a href="/public/profile.html">Profile</a>
+    <a href="/public/contact.html">Contact</a>
   </nav>
 
 <div class="content-container">
@@ -53,10 +53,10 @@
       enabling healthcare professionals<br> to provide personalized, data-driven care to patients worldwide.<br>
       Whether you're a healthcare professional, patient, or simply interested in the future of healthcare,</p><br>
       <h2>Here is the process to follow:</h2>
-      1. <a href="doctorRegister.html">Create your account</a><br>
-      2. <a href="doctorLogin.html">Login</a><br>
-      3. <a href="profile.html">Update your profile</a><br>
-      4. <a href="appointment.html">Confirm your schedule updates</a><br>
+      1. <a href="/public/doctor/register.html">Create your account</a><br>
+      2. <a href="/public/doctor/login.html">Login</a><br>
+      3. <a href="/public/profile.html">Update your profile</a><br>
+      4. <a href="/public/appointment.html">Confirm your schedule updates</a><br>
   </main> 
 
   <!-- Sidebars -->
@@ -66,25 +66,25 @@
       <h2>Our Services</h2>
       <div class="container">
         <div class="card">
-          <a href="appointment.html" id="cardlinks">
+          <a href="/public/appointment.html" id="cardlinks">
           <h3>Virtual Consultations</h3>
           <p>Book a virtual consultation with a licensed healthcare provider from the comfort of your home.</p>
         </a>
         </div>
         <div class="card">
-          <a href="services.html">
+          <a href="/public/services.html">
           <h3>Doctor Specializations</h3>
           <p>Find the right specialist for your health needs and book an appointment at your convenience.</p>
         </a>
         </div>
         <div class="card">
-          <a href="appointment.html">
+          <a href="/public/appointment.html">
           <h3>Appointment Scheduling</h3>
           <p>Easily schedule, reschedule, or cancel your appointments online.</p>
         </a>
         </div>
         <div class="card">
-          <a href="services.html">
+          <a href="/public/services.html">
           <h3>Location-Based Services</h3>
           <p>Find nearby health centers using our location-based services integrated with Google Maps.</p>
         </a>
@@ -94,9 +94,9 @@
   
     <!-- Appointment -->
     <section id="appointment" class="sidebar-section">
-      <h2>Booking an Appointment</h2>
+      <h2>Checking Booked Appointments</h2>
       <form id="appointmentForm">
-        <label for="doctor">Select Doctor</label>
+        <label for="doctor">Doctor Details Entered</label>
         <label for="appointmentDate">Appointment Date</label>
         <label for="appointmentTime">Appointment Time</label>
       </form>
@@ -105,7 +105,7 @@
 </div>
   <!-- Footer -->
   <footer style="background-color: lightpink; color: black;">
-    Review our <a href="terms.html">terms and conditions here</a><br>
+    Review our <a href="/public/terms.html">terms and conditions here</a><br>
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
     <i class="fa-brands fa-linkedin"></i>
@@ -118,6 +118,6 @@
   </footer>
 
   <!-- JavaScript for Interactivity and JWT Handling -->
-  <script src="public/app.js"></script>
+  <script src="/public/app.js"></script>
 </body>
 </html>
