--- a/public/doctor/register.html
+++ b/public/doctor/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Healthcare Vault - Doctor Registration</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-    <img src="../images/logo.PNG" alt="RHV logo">
+      <a href="/public/index.html"><img src="../images/logo.PNG" alt="RHV logo"></a>
     </div>
     <h1>Revolutionizing healthcare through telemedicine</h1>
     <p>Your Health, Anytime, Anywhere.</p>
@@ -27,6 +27,15 @@
 
     <label for="last_name">Last Name</label>
     <input type="text" id="last_name" name="last_name" placeholder="enter last name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="enter your official email address" required>
+
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" placeholder="enter a unique password" required>
+
+    <label for="phone">Phone Number</label>
+    <input type="text" id="phone" name="phone" placeholder="enter your registered phone number" required>
 
     <label for="specialization">Specialization</label>
     <select id="specialization" name="specialization" required>
@@ -45,6 +54,7 @@
       <option value="hematology">Hematology</option>
       <option value="infectious_disease">Infectious Disease</option>
       <option value="internal_medicine">Internal Medicine</option>
+      <option value="midwifery">Midwifery</option>
       <option value="nephrology">Nephrology</option>
       <option value="neurology">Neurology</option>
       <option value="nutrition">Nutrition</option>
@@ -66,13 +76,8 @@
       <option value="nuclear_medicine">Nuclear Medicine</option>
       <option value="sports_medicine">Sports Medicine</option>
       <option value="palliative_medicine">Palliative Medicine</option>
+      <option value="other">Other</option>
     </select>
-
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="enter your official email address" required>
-
-    <label for="phone">Phone Number</label>
-    <input type="text" id="phone" name="phone" placeholder="enter your registered phone number" required>
 
     <label for="schedule">Schedule</label>
     <input type="text" id="schedule" name="schedule" placeholder="click to select your availability dates" required>
@@ -88,11 +93,11 @@
     </script>
 
     <label for="terms" class="terms-label">
-    I have read and I accept <a href="terms.html">terms & conditions.</a>
+    I have read and I accept <a href="/public/terms.html">terms & conditions.</a>
     <input type="checkbox" id="terms" required>
     </label><br>
     <button type="submit">Register</button><br>
-    <a href="doctorLogin.html">Already have an account? Log in</a>
+    <a href="/public/doctor/login.html">Already have an account? Log in</a>
   </form>  
   
   <!-- Section to display form summary -->
@@ -100,7 +105,7 @@
 
   <!-- Footer -->
   <footer style="background-color: lightpink; color: black;">
-    Review our <a href="terms.html">terms and conditions here</a><br>
+    Review our <a href="/public/terms.html">terms and conditions here</a><br>
     <i class="fa-brands fa-facebook"></i>
     <i class="fa-brands fa-twitter"></i>
     <i class="fa-brands fa-linkedin"></i>
@@ -113,6 +118,6 @@
   </footer>
 
   <!-- JavaScript for Interactivity and JWT Handling -->
-  <script src="public/app.js"></script>
+  <script src="/public/app.js"></script>
 </body>
 </html>
