--- a/public/terms.html
+++ b/public/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - Remote Healthcare Vault</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="/public/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -58,15 +58,15 @@
         <p>We reserve the right to modify these terms at any time. Your continued use of the website after any such changes constitutes your acceptance of the new terms.</p>
 
         <h2>16. Contact Us</h2>
-        <p>If you have any questions about these terms, please contact us at support@rhv.com.</p>
+        <p>If you have any questions about these terms, please contact us at <a href="/public/contact.html">support@rhv.com</a>.</p>
     </main>
     <h2>
-    <a style="margin: 550px;" href="register.html">Click here to go back to patient registration page</a>
-    <a href="doctorRegister.html">Click here to go back to doctor registration page</a>
-    <a href="adminRegister.html">Click here to go back to admin registration page</a>
+    <a style="margin: 550px;" href="/public/patient/register.html">Click here to go back to patient registration page</a>
+    <a href="/public/doctor/register.html">Click here to go back to doctor registration page</a>
+    <a href="/public/admin/register.html">Click here to go back to admin registration page</a>
     </h2>
     <footer style="background-color: lightpink; color: black;">
-        Review our <a href="terms.html">terms and conditions here</a><br>
+        Review our <a href="/public/terms.html">terms and conditions here</a><br>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-linkedin"></i>
